# NCRL-Winter-Program

./: README.md
day1/: CMakeLists.txt  package.xml
day1/bag/: bag檔位置
day1/include/day1/: ncrl.h
day1/src/: Integration.cpp  ncrl.cpp
day2/: CMakeLists.txt  package.xml
day3/: CMakeLists.txt  package.xml
day3/src/: icpmatch.cpp  initialicpmatch.cpp
day4/: CMakeLists.txt  package.xml
day4/src/: jacobian.cpp  practice.cpp
day5/: CMakeLists.txt  package.xml
day5/src/: kalman.cpp  kf_test.cpp
